# vleesjongen

./: .doxconf  CMakeLists.txt  README.md
html/: adjust_8h_source.html  annotated.html  baseevent_8h_source.html  botser_8h_source.html  classes.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__writer-members.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1exception-members.html  classnlohmann_1_1detail_1_1exception.html  classnlohmann_1_1detail_1_1file__input__adapter-members.html  classnlohmann_1_1detail_1_1file__input__adapter.html  classnlohmann_1_1detail_1_1input__adapter-members.html  classnlohmann_1_1detail_1_1input__adapter.html  classnlohmann_1_1detail_1_1input__buffer__adapter-members.html  classnlohmann_1_1detail_1_1input__buffer__adapter.html  classnlohmann_1_1detail_1_1input__stream__adapter-members.html  classnlohmann_1_1detail_1_1input__stream__adapter.html  classnlohmann_1_1detail_1_1invalid__iterator-members.html  classnlohmann_1_1detail_1_1invalid__iterator.html  classnlohmann_1_1detail_1_1iter__impl-members.html  classnlohmann_1_1detail_1_1iter__impl.html  classnlohmann_1_1detail_1_1iteration__proxy-members.html  classnlohmann_1_1detail_1_1iteration__proxy.html  classnlohmann_1_1detail_1_1iteration__proxy__value-members.html  classnlohmann_1_1detail_1_1iteration__proxy__value.html  classnlohmann_1_1detail_1_1json__ref-members.html  classnlohmann_1_1detail_1_1json__ref.html  classnlohmann_1_1detail_1_1json__reverse__iterator-members.html  classnlohmann_1_1detail_1_1json__reverse__iterator.html  classnlohmann_1_1detail_1_1json__sax__acceptor-members.html  classnlohmann_1_1detail_1_1json__sax__acceptor.html  classnlohmann_1_1detail_1_1json__sax__dom__callback__parser-members.html  classnlohmann_1_1detail_1_1json__sax__dom__callback__parser.html  classnlohmann_1_1detail_1_1json__sax__dom__parser-members.html  classnlohmann_1_1detail_1_1json__sax__dom__parser.html  classnlohmann_1_1detail_1_1lexer-members.html  (+325 more)
latex/: annotated.tex  (+215 more)
(+114 files in other folders)
